template: fix input text color for search bar on dark mode
- remove unused debug messages in search.js

--- a/sass/_color_dark.sass
+++ b/sass/_color_dark.sass
@@ -13,6 +13,7 @@
 
   input[type="search"]
     background-color: black
+    color: white
 
   #back-to-top
     background-color: #3b3a39
